--- a/src/app/employees/employees.component.html
+++ b/src/app/employees/employees.component.html
@@ -1,5 +1,5 @@
 <mat-card>
-    <mat-card-content>
+    <mat-card-content class="scrollbar">
         <mat-table [dataSource]="employees">
             <ng-container matColumnDef="id">
                 <mat-header-cell *matHeaderCellDef>ID</mat-header-cell>
