--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,4 +1,12 @@
-<div>  
+<!-- <div>  
     <h1> Simple Routing Demo By : Sagar Ahuja </h1>  
     <h3>You can find Source Code <a target="_new" href="https://github.com/AhujaSagar/Angular_Employee_Login">here</a></h3>
-</div>`
+</div> -->
+<div id="user">
+
+</div>
+<div id="dashboard">
+    <a mat-button color="primary" routerLink="/employees/">View Employees</a>
+    <a mat-button color="primary" href="https://github.com/AhujaSagar/Angular_Employee_Login">View Code</a>
+    <a mat-button color="primary" (click)="Logout()">Logout</a>
+</div>
