--- a/src/app/employee/employee.component.html
+++ b/src/app/employee/employee.component.html
@@ -3,17 +3,26 @@
         {{employee.employee_name}}
     </mat-card-title>
     <mat-card-content>
+        <mat-divider></mat-divider>
         <div class="mat-body-1">
-            Salary
+            <mat-card-subtitle>
+            <mat-icon> monetization_on</mat-icon>Salary
+            
+        </mat-card-subtitle>
         </div>
         <div class="mat-body-2">
             {{employee.employee_salary | currency: 'USD'}}&nbsp;
         </div>
+        <mat-divider></mat-divider>
         <div class="mat-body-1">
+        <mat-card-subtitle>
+        <mat-icon>person</mat-icon>
             Age
+        </mat-card-subtitle>
         </div>
         <div class="mat-body-2">
             {{employee.employee_age | ageLabel}}&nbsp;
         </div>
+        <mat-divider></mat-divider>
     </mat-card-content>
 </mat-card>
