--- a/src/styles.scss
+++ b/src/styles.scss
@@ -34,6 +34,17 @@ h1{
     justify-content: center;
     align-items: center;
 }
+.mat-card-subtitle{
+    font-size: large;
+    font-weight: bold;
+    margin: 0.5rem;
+}
+.mat-card-title{
+    margin: 0.5rem;
+}
+.mat-card-content{
+    margin:0.5rem;
+}
 @media(max-width:600px){
     .mat-list-base .mat-list-item .mat-list-item-content{
         padding: 0 !important;
